<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">今天吃什么</string>

    <!-- 登录/注册 -->
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="nickname">昵称</string>
    <string name="confirm_password">确认密码</string>
    <string name="login_success">登录成功</string>
    <string name="register_success">注册成功</string>
    <string name="login_failed">登录失败</string>
    <string name="register_failed">注册失败</string>

    <!-- 主页 -->
    <string name="home">首页</string>
    <string name="start_order">开始点菜</string>
    <string name="upload_dish">上传菜品</string>
    <string name="my_pushes">已推送菜单</string>
    <string name="scan_qr">扫一扫</string>
    <string name="my_qr">我的二维码</string>
    <string name="my_friends">我的好友</string>
    <string name="my_photos">我的相册</string>
    <string name="ai_chat">AI智能助手</string>

    <!-- 点菜 -->
    <string name="hot_dish">热菜</string>
    <string name="cold_dish">凉菜</string>
    <string name="staple">主食</string>
    <string name="soup">汤品</string>
    <string name="drink">饮品</string>

    <!-- 购物车 -->
    <string name="cart">购物车</string>
    <string name="view_cart">查看购物车</string>
    <string name="total">合计</string>
    <string name="push_menu">推送菜单</string>
    <string name="push_success">推送成功</string>

    <!-- 推送列表 -->
    <string name="push_list">已推送菜单</string>
    <string name="delete">删除</string>
    <string name="confirm_delete">确认删除</string>
    <string name="no_permission">无权限</string>

    <!-- 二维码 -->
    <string name="qrcode_title">我的二维码</string>
    <string name="scan_title">扫一扫</string>
    <string name="add_friend">添加好友</string>
    <string name="add_friend_success">添加成功</string>

    <!-- 上传 -->
    <string name="upload_title">上传菜品</string>
    <string name="dish_name">菜品名称</string>
    <string name="dish_desc">菜品描述</string>
    <string name="dish_price">价格</string>
    <string name="select_category">选择分类</string>
    <string name="select_image">选择图片</string>
    <string name="submit">提交</string>
    <string name="upload_success">上传成功</string>

    <!-- 通用 -->
    <string name="loading">加载中...</string>
    <string name="error">错误</string>
    <string name="success">成功</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="retry">重试</string>
    <string name="no_data">暂无数据</string>
</resources>
